# scrapy-seleniumbase

./: README.md  pyproject.toml
scrapy_seleniumbase/: __init__.py  middlewares.py  request.py
